# decision-agent-v2

./: .catalystrc  .coverage  .env.example  .gitignore  AI_PRICING_SIMPLE.md  API_DOCS.md  ARCHITECTURE.md  DEPLOYMENT_READY.md  Dockerfile  MEMBER_JOIN_INTEGRATION.md  MEMBER_LEAVE_INTEGRATION.md  PROJECT_README.md  README.md  SEARCH_INTEGRATION_INSTRUCTIONS.md  SETUP.md  SIMPLE_INTEGRATION_STEPS.md  SLACK_DISTRIBUTION_GUIDE.md  TESTING_STEPS.md  ZOHO_CRM_INTEGRATION_GUIDE.md  ZOHO_MARKETPLACE_IMPLEMENTATION_PLAN.md  add_crud_function.py  add_oauth.py  alembic.ini  app-config.json  catalyst.json  close_unreachable_function.txt  integrate_member_events.py  main.py  member_event_code.txt  oauth_append.txt  patch_member_join.py  pyproject.toml  pytest.cmd  register_command.py  requirements.txt  run.py  run_tests.py  start_ngrok.ps1  test_api.py  test_auto_close.py  (+3 more)
.github/workflows/: ci.yml  pytest.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_ai_limits.py  002_zoho_installations_and_team_id.py  003_consolidate_ai_tables.py  003_group_size_nullable.py  004_remove_auto_close_hours.py  004_zoho_first_schema.py  60751c4d60fc_initial_migration_create_decisions_and_.py  88f915c66504_add_channel_config_and_config_change_.py  8b146b2fa096_add_slack_installations_table.py  remove_is_anonymous_column.py
app/: __init__.py  command_parser.py  config.py  crud.py  dependencies.py  display.py  exceptions.py  helper.py  logging_config.py  main.py  models.py  oauth_endpoints.py  schemas.py  slack_client.py  slack_utils.py  templates.py  templates_docs.py  templates_zoho.py  utils.py  workspace_utils.py
app/ai/: ai_client.py
app/config/: __init__.py  config.py  logging.py
app/database/: __init__.py  crud.py
app/handlers/: commands.py  decision_handlers.py  member_handlers.py
app/integrations/: __init__.py  dashboard.py  oauth_callback.py  zoho_crm.py  zoho_oauth.py  zoho_sync.py
app/jobs/: __init__.py  auto_close.py
app/slack/: __init__.py  client.py  oauth.py
app/utils/: __init__.py  common.py  db_errors.py  display.py  encryption.py  helper.py  slack_parsing.py  workspace.py
database/: base.py  models.py
docs/: Decision_Agent_Brief.md  Decision_Agent_Overview.md
scripts/: .import_check.py  append_handler.py  build_zoho_auth_url.py  check_config.py  config_logging_functions.py  emit_log.py  get_bot_token.py  init_channel_configs.py  inspect_decisions.py  list_channel_members.py  reset_configs.py  start_server.bat  start_uvicorn_detached.py  sync_group_sizes.py  update_threshold.py
scripts/admin/: get_bot_token.py  inspect_decisions.py  list_channel_members.py
scripts/devops/: get_ngrok_url.ps1
scripts/integrations/: integrate_member_events.py
scripts/maintenance/: check_config.py  fix_sequence.py  init_channel_configs.py  reset_configs.py  sync_group_sizes.py
stubs/: alembic.pyi  pythonjsonlogger.pyi  slack_sdk.pyi
stubs/httpx/: __init__.pyi
stubs/slack_sdk/: __init__.pyi  errors.pyi  web.pyi
tests/: conftest.py  manual_verify.py  manual_verify_help.py  test_ai_client.py  test_ai_summary.py  test_api.py  test_character_limits.py  test_command_parser.py  test_crud.py  test_db.py  test_decision_handlers.py  test_edge_cases.py  test_events.py  test_handlers.py  test_help_command.py  test_help_text.py  test_logging_and_errors.py  test_multitenant_zoho.py  test_server.py  test_slack_webhook.py  test_suggest_command.py  test_voting.py  test_zoho_oauth_state.py
(+2 files in other folders)
