[project]
name = "slack-decision-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "annotated-types>=0.7.0",
    "anyio>=4.12.0",
    "apscheduler>=3.11.1",
    "blinker>=1.9.0",
    "certifi>=2025.11.12",
    "charset-normalizer>=3.4.4",
    "click>=8.3.1",
    "colorama>=0.4.6",
    "fastapi>=0.123.7",
    "flask>=3.1.2",
    "google-generativeai>=0.8.5",
    "greenlet>=3.2.4",
    "h11>=0.16.0",
    "httptools>=0.7.1",
    "idna>=3.11",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "joblib>=1.5.2",
    "mako>=1.3.10",
    "markupsafe>=3.0.3",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "six>=1.17.0",
    "slack-sdk>=3.39.0",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.44",
    "sqlalchemy2-stubs>=0.0.2a38",
    "starlette>=0.50.0",
    "threadpoolctl>=3.6.0",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "tzdata>=2025.2",
    "urllib3>=2.5.0",
    "uv>=0.9.15",
    "uvicorn>=0.38.0",
    "watchfiles>=1.1.1",
    "websockets>=15.0.1",
    "werkzeug>=3.1.4",
]
[project.optional-dependencies]
dev = [

]
