[project]
name = "slack-decision-agent"
version = "0.1.0"
description = "A Slack-integrated decision management system for democratic team decision-making"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core Web Framework
    "fastapi>=0.123.7",
    "uvicorn>=0.38.0",
    "starlette>=0.50.0",
    "python-multipart>=0.0.20",
    
    # Database
    "sqlalchemy>=2.0.44",
    "psycopg2-binary>=2.9.11",
    "alembic>=1.17.2",
    
    # Slack Integration
    "slack-sdk>=3.39.0",
    
    # AI Integration
    "google-generativeai>=0.8.5",
    
    # Data Validation
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "annotated-types>=0.7.0",
    
    # Background Jobs
    "apscheduler>=3.11.1",
    
    # HTTP Client
    "requests>=2.32.5",
    
    # Utilities
    "python-dotenv>=1.2.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "tzdata>=2025.2",
    
    # Logging
    "python-json-logger>=4.0.0",
    
    # Type hints
    "typing-extensions>=4.15.0",
    
    # Testing
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "httpx>=0.27.0",  # Required for FastAPI TestClient
]

[project.optional-dependencies]
dev = [
    # Add any additional dev-only tools here
]

